2008-02-17  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (short_audio_sound):
	avoid sound to interrupt itself or other sounds
	
        * avatar.c (text_background_color):
	new variable

	* avatar.c (avt_drawchar):
	optimized, support for bold and underline

	* akfavatar.h, avatar.c (avt_bold, avt_get_bold):
	new functions

	* akfavatar.h, avatar.c (avt_underlined, avt_get_underlined):
	new functions

	* akfavatar.h, avatar.c (AVT_MAKE_BOOL):
	new makro

	* akfavatar.h, avatar.c (avt_get_menu):
	new function

	* akfavatar.h, avatar.c (avt_next_tab, avt_last_tab)
	  (avt_clear_tab_stops, avt_set_tab):
	new functions

	* avatar.c (avt_next_tab, avt_reset_tab_stops):
	new tab handling

	* avatarsay.c (check_config_file):
	new function
	config file: /etc/avatarsay

	* akfavatar.h, avatar.c (avt_activate_cursor):
	new function
	support for text-cursor

	* akfavatar.h, avatar.c (avt_set_origin_mode, avt_get_origin_mode):
	new functions

	* avatar.c (avt_initialize):
	enable key repeat mode

	* akfavatar.h, avatar.c (avt_clear_bol, avt_clear_line):
	(avt_clear_up, avt_clear_down):
	new functions

	* avatar.c (avt_put_character):
	interprets cariage return

	* akfavatar.h, avatar.c (avt_put_character, avt_mb_encode):
	new functions

	* avatarsay.c:
	ability to run lineoriented programs (not for Windows)
	program has a main menu now
	code cleanups and reorganizations
	fix: rawmode (fixes bug #21889)
	(checkoptions): sanity checks
	(execute_process): no blocking, while program outputs nothing

	* akfavatar.h:
	renamed macros to always use the AVT_ prefix
	new type avt_boolean_t

	* avatar.c (avt_init_SDL):
	new function

	* avatar.c:
	more runtime checks

	* akfavatar.h, avatar.c (avt_set_background_color):
	can be called after initialisation

	* akfavatar.h, avatar.c (avt_initialized):
	new function

	* avatar.c (avt_wait_button, avt_wait_key):
	show mouse pointer while waiting for a key (or mouse button)	

        * avatar.c (avt_quit)